# liv-vadankhan-analyser

./: .gitignore  .pdm-python  README.md  ith_export.py  ith_export.txt  linecounter.py  pyproject.toml
device_lists/: QC_sample_abnormal_ITH.csv
dummy_location/: PROBEINF.ini
exports/: debug_QCHZ2_device_summary.csv  debug_QCHZ2_raw_sweeps.csv  debug_QCHZZ_device_summary.csv  debug_QCHZZ_raw_sweeps.csv  debug_device_combined_summary.csv
liv_vadankhan_analyser/: ITH.ipynb  analyser.ipynb  analyser.py  benchmarking_script.py  benmarking_script.py
validation/: 11_nonretest_waferdata.csv  ITH_Benchmarking.jmp  ITH_Benchmarking2.jmp  ITH_benchmarking_sqlvalidation_mechanisticpython.jmp  ITHbenchmark_main.jmp  ITHbenchmark_sample_10000.jmp  Mechanistic_Port_Study_QCI12.jmp  Mechanistic_Port_Study_device_combined_summary.csv  SAMPLE_RAW_CURVES.csv  enseapedia sampling for analyzer test.csv  mass_validation_QCI12_device_summary.csv  mass_validation_device_combined_summary.csv  mass_validation_device_combined_validation.jmp  peak_wavelength_device_combined_validation.csv  peak_wavelength_device_combined_validation.jmp  sample_data_2.csv  series_resistance_device_combined_validation.jmp  slope_efficiency_device_combined_validation.csv  slope_efficiency_device_combined_validation.jmp  stepwise_process_data__normalised_intensity.csv  stepwise_process_data_chebyshev_filter.csv  stepwise_process_data_chebyshev_filter.jmp  streamlining_debugging_QCI12_device_summary.csv  streamlining_debugging_QCI48_device_summary.csv  validation_data_ctqs_full.csv  validation_data_ctqs_full.jmp
