[tool.pdm]
distribution = false

[project]
name = "liv-vadankhan-analyser"
version = "0.1.0"
description = ""
authors = [
    {name = "VadanKhan", email = "vadankhan1@gmail.com"},
]
dependencies = [
    "numpy==1.24.4", 
    "scipy>=1.10,<1.12",
    "matplotlib<4.0.0,>=3.10.1",
    "pandas<3.0.0,>=2.2.3",
    "requests<3.0.0,>=2.32.3",
    "bs4<1.0.0,>=0.0.2",
    "statsmodels<1.0.0,>=0.14.4",
    "scikit-learn<2.0.0,>=1.7.0",
    "plotly>=6.1.2",
    "nbformat>=5.10.4",
    "tqdm>=4.67.1",
]
requires-python = "<3.12,>=3.11"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
dev = [
    "ipykernel<7.0.0,>=6.29.5",
]


[tool.poetry]
name = "liv-vadankhan-analyser"
version = "0.1.0"
description = ""
authors = ["VadanKhan <vadankhan1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = { version = "1.24.4", markers = "python_version >= '3.11'" }
scipy = "1.9.1"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
requests = "^2.32.3"
bs4 = "^0.0.2"
statsmodels = "^0.14.4"
scikit-learn = "^1.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

